[package]
name = "gattaca"
version = "0.1.0"
authors = ["Daniel Rivas <danielrivasmd@gmail.com>"]
repository = "https://github.com/DanielRivasMD/GATTACA"
keywords = []
categories = []
readme = "README.md"
description = ""
edition = "2024"

[[bin]]
name = "extract_quality"
path = "src/bin/extract_quality.rs"

[[bin]]
name = "cat_quality"
path = "src/bin/cat_quality.rs"

[[bin]]
name = "bam2fasta"
path = "src/bin/bam2fasta.rs"

[[bin]]
name = "read_len"
path = "src/bin/read_len.rs"

[[bin]]
name = "dimer_count"
path = "src/bin/dimer_count.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
needletail = "0.6.0"
rand = "0.8"
rand_chacha = "0.3"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
